# mods.cf

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  example.env
.github/: dependabot.yml
.github/workflows/: build.yml
src/: analytics.rs  curseforge.rs  lib.rs  util.rs  web.rs
src/curseforge/: mods.rs
src/web/: files.rs  projects.rs
