[package]
name = "mods_cf"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.9"
axum-test = "20.0.0"
bytes = { version = "1.11.1"}
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = { git = "https://github.com/allan2/dotenvy", rev = "fa25166994d6978bd2e002f0ed190c0c39674ebe", features = ["macros"] }
env_logger = "0.11.10"
extension-traits = "2.0.2"
log = { version = "0.4.29", features = ["serde"] }
posthog-rs = "0.3.7"
reqwest = { version = "0.13.2", features = ["json", "gzip", "brotli", "zstd", "deflate"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
serde_repr = "0.1.20"
tokio = { version = "1.52.1", features = ["full"] }
url = "2.5.8"
